--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home</a></li>
+						<li class="active"><a href="#" data-nav-section="home">Home2</a></li>
 						<li><a href="#gallery" data-nav-section="about">Publications</a></li>
 						<li><a href="#" data-nav-section="work">Research</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
