--- a/index.html
+++ b/index.html
@@ -96,14 +96,16 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Home2</a></li>
-						<li><a href="#gallery" data-nav-section="about">Publications</a></li>
-						<li><a href="#" data-nav-section="work">Research</a></li>
+						<li class="active"><a href="#" data-nav-section="home">Project1</a></li>
+						<li><a href="#gallery" data-nav-section="about">Project2</a></li>
+						<!--
+						<li><a href="#" data-nav-section="work"></a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="education">TA duty</a></li>
-						<!--<li><a href="#" data-nav-section="services">Project</a></li>-->
+						<li><a href="#" data-nav-section="services">Project</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>	
 						<li><a href="#" data-nav-section="blog">Gallery</a></li>
+						-->
 						<span id="busuanzi_container_site_pv">Total visitors: <span id="busuanzi_value_site_pv"></span>.</span>
 						<!--<span id="busuanzi_container_site_uv">Total visitors: <span id="busuanzi_value_site_u"></span>.</span>-->
 						<!--<p>Total visitors: <span data-hk-site> - </span></p> -->
