--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Project1</a></li>
-						<li><a href="#gallery" data-nav-section="about">Project2</a></li>
+						<li><a href="#gallery" data-nav-section="about">back to main</a></li>
 						<!--
 						<li><a href="#" data-nav-section="work"></a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
