--- a/index.html
+++ b/index.html
@@ -96,8 +96,9 @@
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li class="active"><a href="#" data-nav-section="home">Project1</a></li>
-						<li><a href="#gallery" data-nav-section="about">back to main</a></li>
+						<li class="active"><a href="#" data-nav-section="home">Project 1</a></li>
+						<li><a href="#gallery" data-nav-section="about">Project 2</a></li>
+						<li><a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about">back to main</a></li>
 						<!--
 						<li><a href="#" data-nav-section="work"></a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
