--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@
 				<span class="position">Work Hard in Silence <br /> Let Success Make the Noise.</span>
 				
 			</div>
-			<nav id="colorlib-main-menu" role="navigation" class="navbar">
+			<nav id="colorlib-main-menu" role="navigation" class="navbar txt">
 				<div id="navbar" class="collapse">
 					<ul>
 						<li class="active"><a href="#" data-nav-section="home">Project 1</a></li>
 						<li><a href="#gallery" data-nav-section="about">Project 2</a></li>
-						<li><a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about">back to main</a></li>
 						<!--
 						<li><a href="#" data-nav-section="work"></a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
@@ -107,13 +106,15 @@
 						<li><a href="#" data-nav-section="skills">Skills</a></li>	
 						<li><a href="#" data-nav-section="blog">Gallery</a></li>
 						-->
-						<span id="busuanzi_container_site_pv">Total visitors: <span id="busuanzi_value_site_pv"></span>.</span>
+						
 						<!--<span id="busuanzi_container_site_uv">Total visitors: <span id="busuanzi_value_site_u"></span>.</span>-->
 						<!--<p>Total visitors: <span data-hk-site> - </span></p> -->
 					</ul>
 				</div>
+				&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about"><font size="2" color="black">BACK TO MAIN</font></a>
+				</br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span id="busuanzi_container_site_pv">Total visitors: <span id="busuanzi_value_site_pv"></span>.</span>
 			</nav>
-
+			
 
 
 		</aside>
