--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 						<!--<p>Total visitors: <span data-hk-site> - </span></p> -->
 					</ul>
 				</div>
-				&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about"><font size="2" color="black">BACK TO MAIN</font></a>
+				&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about"><font size="2" color="black">BACK TO MAIN1</font></a>
 				</br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span id="busuanzi_container_site_pv">Total visitors: <span id="busuanzi_value_site_pv"></span>.</span>
 			</nav>
 			
