--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ sustainable activities in the field.</font></p>
 							<div class="about-desc">
 								<!--<span class="heading-meta">About Us</span>-->
 								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
-								<h2><font face="timesnewroman">Project 2: Event-driven PUF</font></h2>			
+								<h2><font face="timesnewroman"><li id="a1"><a href="#1">Project 2: Event-driven PUF</a></li></font></h2>			
 									
 									<p class="normal justify"><font size="4" face="timesnewroman"> Surveillance footage has become an integral part of law enforcement as video cameras become ubiquitous, affordable
 and more reliable. Dynamic vision sensor (DVS) emerges as a new sensing technology that outsmarts existing static CMOS image sensors in vision-enabled traffic monitoring, assisted living and
