--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						<!--<p>Total visitors: <span data-hk-site> - </span></p> -->
 					</ul>
 				</div>
-				&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about"><font size="2" color="black">BACK TO MAIN1</font></a>
+				&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp <a href="https://yzheng015.github.io/zhengyue.github.io/" data-nav-section="about"><font size="2" color="black">BACK TO MAIN</font></a>
 				</br>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp &nbsp<span id="busuanzi_container_site_pv">Total visitors: <span id="busuanzi_value_site_pv"></span>.</span>
 			</nav>
 		</aside>
@@ -151,7 +151,7 @@ sustainable activities in the field.</font></p>
 							<div class="about-desc">
 								<!--<span class="heading-meta">About Us</span>-->
 								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
-								<h2><font face="timesnewroman"><li id="a1"><a href="#2">Project 2: Event-driven PUF</a></li></font></h2>			
+								<h2><font face="timesnewroman"><li id="a2"><a href="#2">Project 2: Event-driven PUF</a></li></font></h2>			
 									
 									<p class="normal justify"><font size="4" face="timesnewroman"> Surveillance footage has become an integral part of law enforcement as video cameras become ubiquitous, affordable
 and more reliable. Dynamic vision sensor (DVS) emerges as a new sensing technology that outsmarts existing static CMOS image sensors in vision-enabled traffic monitoring, assisted living and
