--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ since the inception of Internet of Things (IoT) in late 1990s. IoT devices pose 
 cost constraints. Traditional software techniques and established cryptographic methods are either inadequate or impractical due to the computational capacity and permanent storage required to
 process and maintain the privacy of the secret key. In this light, Physical Unclonable Function (PUF), a burgeoning technology rooted in 2002, comes in handy as an inexpensive and yet effective
 security primitive to overcome the forgery tagging problem by its radically different way of generating and processing secret keys in security hardware. PUFs are hardware structures or functions
-designed to utilize the physical disorder of random nanoscale phenomena for the derivation of keys without having to keep any security-critical information explicitly in hardware. As we
-usher PUF into its 15th anniversary in 2017, it is timely to review the advancements of PUF over the past decade. Specifically, this survey addresses three fundamental questions which are at all
+designed to utilize the physical disorder of random nanoscale phenomena for the derivation of keys without having to keep any security-critical information explicitly in hardware. </font></p>
+									<p class="normal justify"><font size="4" face="timesnewroman">In this work, the advancements of PUF over the past decade (2002~2017) is reviewed. Specifically, this survey addresses three fundamental questions which are at all
 times relevant in the security arms race. These questions are: how secure can a PUF be? what differences have PUFs brought to security applications and how do these differences impact
 existing security protocols? how is hardware implementation research influenced by the opportunities of nanotechnologies and new discoveries of disorder-based physical phenomena? It is
 hoped that this retrospective study of problems and solutions encountered in the journey of developing PUF to its current state will foreshadow the challenges and opportunities for future
@@ -187,10 +187,18 @@ pixel to enable simultaneous generation of PUF response with non-disruptive outp
 						<div class="col-md-12">
 							<div class="about-desc">
 								<!--<span class="heading-meta">About Us</span>-->
-								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
-								<h2><font face="verdana">Project 3: User Device PUF</font></h2>			
+								<h2><font face="timesnewroman"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="timesnewroman">Project 3: User Device PUF</font></h2>			
 									
-									<p class="normal justify"><font face="verdana"><b>I am currently</b></font></p>
+									<p class="normal justify"><font face="timesnewroman"><b>With IT consumerization, access control to remote system by endpoint user and endpoint device is mandatory
+for security and privacy protection. Existing systems bind an end-user with his/her registered devices but authenticate only the user and device independently. This work
+presents a novel UDhashing scheme, which is capable of providing a bipartite authentication of both end-user and end-device as a whole, and mutual authentication between
+the endpoint and the verifier. Non-contact facial biometric is extracted as user identity and physical unclonable function (PUF) is embedded into the device to generate a device
+“fingerprint”. UDhashing serves as an intermediary to unify the macroscopic human biometric and microscopic silicon entropy source into a single identity. The scheme is demonstrated
+using measured silicon data of a diode-clamped inverter based strong PUF fabricated in 40nm 1.1V CMOS technology, and the ORL and Ext. Yale B face databases. The experimental
+results show that the proposed system has good authentication performance with excellent discriminability for different (challenge, user, device) tuples. Besides, the
+proposed system is analyzed to be resilient to several known attacks. Its reliability and authentication performance can be easily enhanced by low-cost error-correction technique
+without compromising security.</b></font></p>
 
 									</p>
 							</div>
