--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@ sustainable activities in the field. Some important/interesting contents are lis
 							<div class="about-desc">
 								<!--<span class="heading-meta">About Us</span>-->
 								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
 								<h2 id="p2"><font face="timesnewroman">Project 2: Event-driven PUF</font></h2>			
 									
 									<p class="normal justify"><font size="4" face="timesnewroman"> Surveillance footage has become an integral part of law enforcement as video cameras become ubiquitous, affordable
