--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 		</aside>
 		
 		
-		
+		<div id="colorlib-main">
 			<section id="colorlib-hero" class="js-fullheight" data-section="p1">
 				<div class="colorlib-narrow-content">
 				<div class="row">
