--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 							<div class="about-desc">
 								<!--<span class="heading-meta">About Us</span>-->
 								<!--<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	-->
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>
 								<h2 id="p1"><font face="timesnewroman">Project 1: Physical Unclonable Function</font></h2>			
 							
 									<p class="normal justify"><font size="4" face="timesnewroman">Severe security threats and alerts associated with the use of smart devices have drawn increasing public attentions
