--- a/index.html
+++ b/index.html
@@ -251,6 +251,47 @@ without compromising security.</font></p>
 				</div>
 			</section>
 
+
+<section id="colorlib-hero" class="js-fullheight" data-section="p4">
+				<div class="colorlib-narrow-content">
+				<div class="row">
+				<div class="col-md-12">
+					<div class="row row-bottom-padded-sm">
+						<div class="col-md-12">
+							<div class="about-desc">
+								<!--<span class="heading-meta">About Us</span>-->
+							<!--	<h2><font face="timesnewroman"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	
+								<h2><font face="verdana"> &nbsp &nbsp &nbsp &nbsp </font></h2>	-->
+			
+								<h2 id="p4"><font face="timesnewroman">Project 4: Data-Device PUF</font></h2>			
+									
+									<p class="normal justify"><font size="4" face="timesnewroman">
+									Image/Video security has been increasingly endangered by Arti cial Intelligence (AI) as multiple forces are driving the latter to play a vital role in IoT applications. AI technologies can unlock IoT potential in multifold circumstances. For example, machine learning technique is used to automatically identify pattern and detect anomalies in the data that image sensor generated. AI with IoT can be used to analyze human behavior, and create truly grand smart home and smart shopping experience. However, they can also be abused by malicious users to distort the image or videos to mislead people or clinch wrongful convictions in a court of law. In late 2017, a software called “deep fakes” was anonymously released that uses deep learning to swap the face of a person to create a very realistic fake picture or video. The non-consensual use of this tool to insert celebrity faces onto pornographic videos caused the popular online forum Reddit to shut down its /r/deepfakes subreddit discussion board [128]. This incident raises a red  ag, given the prevalent use of surveillance footage to aid criminal investigation and civil litigation. As fraudsters can be adept at using AI, it is imperative to enhance digital (visual) evidences with technologies that can not only detect forgeries (image tampering detection) but also identify the digital device that captures the evidence (source camera identi cation) to combat anti-forensics.
+									</font></p>
+									<p class="normal justify"><font size="4" face="timesnewroman">
+ This work presents a novel UDhashing scheme, which is capable of providing a <b>bipartite authentication of both end-user and end-device</b> as a whole, and <b>mutual authentication</b> between
+the endpoint and the verifier. Non-contact facial biometric is extracted as user identity and physical unclonable function (PUF) is embedded into the device to generate a device
+“fingerprint”. UDhashing serves as an intermediary to unify the macroscopic human biometric and microscopic silicon entropy source into a single identity. The scheme is demonstrated
+using measured silicon data of a diode-clamped inverter based strong PUF fabricated in 40nm 1.1V CMOS technology, and the ORL and Ext. Yale B face databases. The experimental
+results show that the proposed system has good authentication performance with <b>excellent discriminability for different (challenge, user, device) tuples</b>. Besides, the
+proposed system is analyzed to be <b>resilient to several known attacks</b>. Its reliability and authentication performance can be easily enhanced by low-cost error-correction technique
+without compromising security.</font></p>
+
+									<p class="normal justify"><font size="4" face="timesnewroman"><b>Achieved papers:</b>
+										</br>[1]<b> Y. Zheng</b>, Y. Cao and C.H. Chang, "UDhashing: Physical Unclonable Function Based User-Device Hash for Endpoint Authentication", IEEE Trans. Industrial Electronics (to appear).
+										<br/>[2] <b>Y. Zheng</b>, Y. Cao, and C.H. Chang, "Facial biohashing based User-Device physical unclonable function for bring your own device system (Invited Paper)," in Proc. IEEE Int. Conf. on Consumer Electronics (ICCE 2018), DOI 10.1109/ICCE.2018.8326074, Las Vegas, US, Jan. 2018. <a href="https://ieeexplore.ieee.org/abstract/document/8326074">[link]</a>
+									</font></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				</div>
+				</div>
+			</section>
 	
 			
 <!--
